--- a/ecommerce/WebApplication1/Views/Category/CategoryList.cshtml
+++ b/ecommerce/WebApplication1/Views/Category/CategoryList.cshtml
@@ -6,7 +6,7 @@
             <div class="brands-name">
                 @foreach (var item in Model)
                 {
-                    <ul class="nav nav-pills nav-stacked">
+                    <ul class="nav nav-pills nav-stacked mb-1">
                         <li><a href="/Category/Details/@item.Id"> <span class="pull-right">(@item.Products.Count)</span>@item.Name</a></li>
                     </ul>
                 }
