--- a/ecommerce/WebApplication1/Views/Category/Details.cshtml
+++ b/ecommerce/WebApplication1/Views/Category/Details.cshtml
@@ -3,61 +3,70 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 <section id="slider">
+    <!--slider-->
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-12">
                 <div id="slider-carousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
                         <li data-target="#slider-carousel" data-slide-to="1"></li>
                         <li data-target="#slider-carousel" data-slide-to="2"></li>
                     </ol>
+
                     <div class="carousel-inner">
-                        <div class="item active">
-                            <div class="col-sm-6">
-                                <h1>e-commerce</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                                <button type="button" class="btn btn-default get">Get it now</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="~/eshop/images/home/girl1.jpg" class="girl img-responsive" alt="" />
-                                <img src="~/eshop/images/home/pricing.png" class="pricing" alt="" />
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="col-sm-6">
-                                <h1>e-commerce</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                                <button type="button" class="btn btn-default get">Get it now</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="~/eshop/images/home/girl2.jpg" class="girl img-responsive" alt="" />
-                                <img src="~/eshop/images/home/pricing.png" class="pricing" alt="" />
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h1>E-commerce</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <button type="button" class="btn btn-primary">Get it now</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="~/eshop/images/home/girl1.jpg" class="img-fluid" alt="" />
+                                    <img src="~/eshop/images/home/pricing.png" class="pricing img-fluid" alt="" />
+                                </div>
                             </div>
                         </div>
 
-                        <div class="item">
-                            <div class="col-sm-6">
-                                <h1>e-commerce</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                                <button type="button" class="btn btn-default get">Get it now</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="~/eshop/images/home/girl3.jpg" class="girl img-responsive" alt="" />
-                                <img src="~/eshop/images/home/pricing.png" class="pricing" alt="" />
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h1><span>E</span>-SHOPPER</h1>
+                                    <h2>100% Responsive Design</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <button type="button" class="btn btn-primary">Get it now</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="~/eshop/images/home/girl2.jpg" class="img-fluid" alt="" />
+                                    <img src="~/eshop/images/home/pricing.png" class="pricing img-fluid" alt="" />
+                                </div>
                             </div>
                         </div>
 
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h1><span>E</span>-SHOPPER</h1>
+                                    <h2>Free Ecommerce Template</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <button type="button" class="btn btn-primary">Get it now</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="~/eshop/images/home/girl3.jpg" class="img-fluid" alt="" />
+                                    <img src="~/eshop/images/home/pricing.png" class="pricing img-fluid" alt="" />
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
-                    <a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
+                    <a href="#slider-carousel" class="carousel-control-prev" role="button" data-slide="prev" style="color:black;">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
+                    <a href="#slider-carousel" class="carousel-control-next" role="button" data-slide="next" style="color:black;">
                         <i class="fa fa-angle-right"></i>
                     </a>
                 </div>
-
             </div>
         </div>
     </div>
@@ -68,26 +77,28 @@
         <div class="row">
             @Html.Action("CategoryList", "Category")
 
-            <div class="col-sm-9 padding-right">
+            <div class="col-md-9 padding-right">
                 <div class="features_items">
                     <h2 class="title text-center">Ürünlerimiz</h2>
-                    @foreach (var item in Model)
-                    {
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <a href="/Product/Details/@item.Id">
-                                            <img src="~/Content/Image/@item.Image" style="object-fit:cover;" width="200" height="200" alt="" />
-                                        </a>
-                                        <h2>@item.Price</h2>
-                                        <p>@item.Name</p>
-                                        <a href="/Product/Details/@item.Id" class="btn btn-default add-to-cart">Ürün Detay</a>
+                    <div class="row">
+                        @foreach (var item in Model)
+                        {
+                            <div class="col-md-4 col-sm-6 mb-4">
+                                <div class="product-image-wrapper">
+                                    <div class="single-products">
+                                        <div class="productinfo text-center">
+                                            <a href="/Product/Details/@item.Id">
+                                                <img src="~/Content/Image/@item.Image" style="object-fit:cover;" class="img-fluid" alt="" />
+                                            </a>
+                                            <h2>@item.Price</h2>
+                                            <p>@item.Name</p>
+                                            <a href="/Product/Details/@item.Id" class="btn btn-default add-to-cart">Ürün Detay</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    }
+                        }
+                    </div> 
                 </div>
                 @Html.Action("FeaturedProduct", "Product")
             </div>
