--- a/ecommerce/WebApplication1/Views/Home/Index.cshtml
+++ b/ecommerce/WebApplication1/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <!--slider-->
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-12">
                 <div id="slider-carousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
@@ -18,66 +18,72 @@
                     </ol>
 
                     <div class="carousel-inner">
-                        <div class="item active">
-                            <div class="col-sm-6">
-                                <h1>>e-commerce</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                                <button type="button" class="btn btn-default get">Get it now</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="~/eshop/images/home/girl1.jpg" class="girl img-responsive" alt="" />
-                                <img src="~/eshop/images/home/pricing.png" class="pricing" alt="" />
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="col-sm-6">
-                                <h1><span>E</span>-SHOPPER</h1>
-                                <h2>100% Responsive Design</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                                <button type="button" class="btn btn-default get">Get it now</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="~/eshop/images/home/girl2.jpg" class="girl img-responsive" alt="" />
-                                <img src="~/eshop/images/home/pricing.png" class="pricing" alt="" />
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h1>E-commerce</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <button type="button" class="btn btn-primary">Get it now</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="~/eshop/images/home/girl1.jpg" class="img-fluid" alt="" />
+                                    <img src="~/eshop/images/home/pricing.png" class="pricing img-fluid" alt="" />
+                                </div>
                             </div>
                         </div>
 
-                        <div class="item">
-                            <div class="col-sm-6">
-                                <h1><span>E</span>-SHOPPER</h1>
-                                <h2>Free Ecommerce Template</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                                <button type="button" class="btn btn-default get">Get it now</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="~/eshop/images/home/girl3.jpg" class="girl img-responsive" alt="" />
-                                <img src="~/eshop/images/home/pricing.png" class="pricing" alt="" />
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h1><span>E</span>-SHOPPER</h1>
+                                    <h2>100% Responsive Design</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <button type="button" class="btn btn-primary">Get it now</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="~/eshop/images/home/girl2.jpg" class="img-fluid" alt="" />
+                                    <img src="~/eshop/images/home/pricing.png" class="pricing img-fluid" alt="" />
+                                </div>
                             </div>
                         </div>
 
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h1><span>E</span>-SHOPPER</h1>
+                                    <h2>Free Ecommerce Template</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <button type="button" class="btn btn-primary">Get it now</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="~/eshop/images/home/girl3.jpg" class="img-fluid" alt="" />
+                                    <img src="~/eshop/images/home/pricing.png" class="pricing img-fluid" alt="" />
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
-                    <a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
+                    <a href="#slider-carousel" class="carousel-control-prev" role="button" data-slide="prev" style="color:black;">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
+                    <a href="#slider-carousel" class="carousel-control-next" role="button" data-slide="next" style="color:black;">
                         <i class="fa fa-angle-right"></i>
                     </a>
                 </div>
-
             </div>
         </div>
     </div>
-</section><!--/slider-->
+</section>
 
 <section>
     <div class="container">
         <div class="row">
-            @Html.Action("CategoryList","Category")
+            @Html.Action("CategoryList", "Category")
 
-            <div class="col-sm-9 padding-right" >
-                <div class="features_items">
-                    <h2 class="title text-center">Ürünler</h2>
+            <div class="features_items">
+                <h2 class="title text-center">Ürünler</h2>
+                <div class="row">
+                    <!-- Yeni bir row ekleyin -->
                     @foreach (var item in Model)
                     {
                         <div class="col-sm-4">
@@ -95,16 +101,17 @@
                             </div>
                         </div>
                     }
+                </div> <!-- row kapama tagı -->
 
-                    @Html.PagedListPager(Model, sayfa => Url.Action("Index", new { sayfa }), PagedListRenderOptions.Classic)
+                <div class="text-center">
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }), PagedListRenderOptions.Classic)
+                </div>
+            </div><!--features_items-->
 
 
+            @Html.Action("FeaturedProduct", "Product")
 
-                </div><!--features_items-->
-
-                @Html.Action("FeaturedProduct", "Product")
-
-            </div>
+        </div>
         </div>
     </div>
 </section>
