--- a/ecommerce/WebApplication1/Views/Product/Details.cshtml
+++ b/ecommerce/WebApplication1/Views/Product/Details.cshtml
@@ -3,136 +3,90 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Product Detay | E-Shopper</title>
-    <link href="~/eshop/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/eshop/css/font-awesome.min.css" rel="stylesheet">
-    <link href="~/eshop/css/prettyPhoto.css" rel="stylesheet">
-    <link href="~/eshop/css/price-range.css" rel="stylesheet">
-    <link href="~/eshop/css/animate.css" rel="stylesheet">
-    <link href="~/eshop/css/main.css" rel="stylesheet">
-    <link href="~/eshop/css/responsive.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/eshop/images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/eshop/images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/eshop/images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="i~/eshop/mages/ico/apple-touch-icon-57-precomposed.png">
-</head><!--/head-->
-
 <body>
-
+    <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/Product/Comment">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="commentModalLabel">Yorum yazınız.</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <textarea class="form-control" name="content" placeholder="Yorum yazınız..." rows="4"></textarea>
+                        <input type="hidden" name="ProductId" value="@Model.Id" />
+                        <input type="hidden" name="UserId" value="@Session["userid"]" />
+                        <input type="hidden" name="CreatedDate" value="@DateTime.Now" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+                        <button type="submit" class="btn btn-primary">Gönder</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <section>
         <div class="container">
             <div class="row">
                 @Html.Action("CategoryList", "Category")
-
                 <div class="col-sm-9 padding-right">
                     <div class="product-details">
-                        <!--product-details-->
-                        <div class="col-sm-5">
-                            <div class="view-product">
-                                <img src="~/Content/Image/@Model.Image" style="width:300px; height:300px; margin-top:20px; object-fit:cover;" alt="@Model.Name" />
-
-                            </div>
-
-
-                        </div>
-                        <div class="col-sm-7">
-                            <div class="product-information">
-
-                                <h2>Ürün Adı: @Model.Name</h2>
-
-
-                                <span>
-                                    <span>@Model.Price TL</span>
-
-
-
-
-                                    <a class="btn btn-fefault cart" style="margin-top:15px" href="/Cart/AddCart/@Model.Id">
-                                        <i class="fa fa-shopping-cart"></i>
-                                        Sepete Ekle
-                                    </a>
-                                </span>
-                                <p><b>Kategori:</b> @Model.Category.Name</p>
-                                <p><b>Stok:</b> @Model.Stock</p>
-                                <p><b>Onay:</b> @Model.isApproved</p>
-                                <p><b>Açıklama:</b> @Model.Description</p>
-                                <a href=""><img src="images/product-details/share.png" class="share img-responsive" alt="" /></a>
-                            </div><!--/product-information-->
-                        </div>
-                    </div><!--/product-details-->
-
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentModal">Yorum Yap</button>
-
-                    <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <form method="post" action="/Product/Comment">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="commentModalLabel">Yorum yazınız.</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <textarea class="form-control" name="content" placeholder="Yorum yazınız..." rows="4"></textarea>
-                                        <input type="hidden" name="ProductId" value="@Model.Id" />
-                                        <input type="hidden" name="UserId" value="@Session["userid"]" />
-                                        <input type="hidden" name="CreatedDate" value="@DateTime.Now" />
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
-                                        <button type="submit" class="btn btn-primary">Gönder</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <br />
-                    <div class='row'>
-                        <div class="col-md-4 col-12">
-                            @foreach (var item in ViewBag.comment)
-                            {
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title" style="color:coral;">
-                                            @item.User.Name
-                                        </h4>
-                                        <p class="card-text">@item.Content</p>
-                                        <br />
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-5">
+                                    <div class="view-product">
+                                        <img src="~/Content/Image/@Model.Image" style="width:300px; height:300px; margin-top:20px; object-fit:cover;" alt="@Model.Name" />
                                     </div>
                                 </div>
-                                <br />
-                            }
+                                <div class="col-sm-7">
+                                    <div class="product-information">
+                                        <h2>Ürün Adı: @Model.Name</h2>
+                                        <span>
+                                            <span>@Model.Price TL</span>
+                                            <a class="btn btn-default cart" style="margin-top:15px" href="/Cart/AddCart/@Model.Id">
+                                                <i class="fa fa-shopping-cart"></i>
+                                                Sepete Ekle
+                                            </a>
+                                        </span>
+                                        <p><b>Kategori:</b> @Model.Category.Name</p>
+                                        <p><b>Stok:</b> @Model.Stock</p>
+                                        <p><b>Onay:</b> @Model.isApproved</p>
+                                        <p><b>Açıklama:</b> @Model.Description</p>
+                                        <a href=""><img src="images/product-details/share.png" class="share img-responsive" alt="" /></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentModal">Yorum Yap</button>
+                        <br />
+                        <div class='row'>
+                            <div class="col-md-4 col-12">
+                                @foreach (var item in ViewBag.comment)
+                                {
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h4 class="card-title" style="color:coral;">
+                                                @item.User.Name
+                                            </h4>
+                                            <p class="card-text">@item.Content</p>
+                                            <br />
+                                        </div>
+                                    </div>
+                                    <hr />
+                                }
+                            </div>
+                        </div>
+                        @Html.Action("FeaturedProduct", "Product")
+
                     </div>
-
-                    @Html.Action("FeaturedProduct", "Product")
-
-                </div>
             </div>
         </div>
     </section>
-
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="~/eshop/js/jquery.js"></script>
-    <script src="~/eshop/js/price-range.js"></script>
-    <script src="~/eshop/js/jquery.scrollUp.min.js"></script>
-    <script src="~/eshop/js/jquery.prettyPhoto.js"></script>
-    <script src="~/eshop/js/main.js"></script>
 </body>
 </html>
 
