--- a/ecommerce/WebApplication1/Views/Product/FeaturedProduct.cshtml
+++ b/ecommerce/WebApplication1/Views/Product/FeaturedProduct.cshtml
@@ -1,56 +1,42 @@
 ﻿<div class="recommended_items">
-    <!--recommended_items-->
     <h2 class="title text-center">Öne Çıkan Ürünler</h2>
 
     <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="item active">
-                @foreach (var item in ViewBag.featured)
-                {
-                    <div class="col-sm-4">
-                        <div class="product-image-wrapper">
-                            <div class="single-products">
-                                <div class="productinfo text-center">
-                                    <a href="/Product/Details/@item.Id">
-                                        <img src="~/Content/Image/@item.Image" style="object-fit:cover;" width="200" height="200" alt="" />
-                                    </a>
-                                    <h2>@item.Price</h2>
-                                    <p>@item.Name</p>
-                                    <a href="/Product/Details/@item.Id" class="btn btn-default add-to-cart">Ürün Detay</a>
+            @for (int i = 0; i < ViewBag.featured.Count; i += 3)
+            {
+                <div class="carousel-item @(i == 0 ? "active" : "")">
+                    <div class="row">
+                        @for (int j = 0; j < 3 && (i + j) < ViewBag.featured.Count; j++)
+                        {
+                            var item = ViewBag.featured[i + j];
+                            <div class="col-md-4 col-sm-6 mb-4">
+                                <div class="product-image-wrapper">
+                                    <div class="single-products">
+                                        <div class="productinfo text-center">
+                                            <a href="/Product/Details/@item.Id">
+                                                <img src="~/Content/Image/@item.Image" class="img-fluid" alt="" />
+                                            </a>
+                                            <h2>@item.Price</h2>
+                                            <p>@item.Name</p>
+                                            <a href="/Product/Details/@item.Id" class="btn btn-default add-to-cart">Ürün Detay</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        }
                     </div>
-                    }
-
-
-            </div>
-            <div class="item">
-                @foreach (var item in ViewBag.featured)
-                {
-                    <div class="col-sm-4">
-                        <div class="product-image-wrapper">
-                            <div class="single-products">
-                                <div class="productinfo text-center">
-                                    <a href="/Product/Details/@item.Id">
-                                        <img src="~/Content/Image/@item.Image" style="object-fit:cover;" width="200" height="200" alt="" />
-                                    </a>
-                                    <h2>@item.Price</h2>
-                                    <p>@item.Name</p>
-                                    <a href="/Product/Details/@item.Id" class="btn btn-default add-to-cart">Ürün Detay</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
-
-            </div>
+                </div>
+            }
         </div>
-        <a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
-            <i class="fa fa-angle-left"></i>
+
+        <a class="carousel-control-prev" href="#recommended-item-carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Önceki</span>
         </a>
-        <a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
-            <i class="fa fa-angle-right"></i>
+        <a class="carousel-control-next" href="#recommended-item-carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Sonraki</span>
         </a>
     </div>
-</div><!--/recommended_items-->
+</div>
