--- a/ecommerce/WebApplication1/Views/Shared/Layout.cshtml
+++ b/ecommerce/WebApplication1/Views/Shared/Layout.cshtml
@@ -6,13 +6,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Home | E-Shopper</title>
-    <link href="~/eshop/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/eshop/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/eshop/css/prettyPhoto.css" rel="stylesheet">
     <link href="~/eshop/css/price-range.css" rel="stylesheet">
     <link href="~/eshop/css/animate.css" rel="stylesheet">
     <link href="~/eshop/css/main.css" rel="stylesheet">
     <link href="~/eshop/css/responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -111,75 +111,80 @@
                         </div>
                     </div>
                     <div class="col-sm-7">
-                        <div class="col-sm-3">
-                            <div class="video-gallery text-center">
-                                <a href="#">
-                                    <div class="iframe-img">
-                                        <img src="~/eshop/images/home/iframe1.png" alt="" />
-                                    </div>
-                                    <div class="overlay-icon">
-                                        <i class="fa fa-play-circle-o"></i>
-                                    </div>
-                                </a>
-                                <p>Circle of Hands</p>
-                                <h2>24 DEC 2014</h2>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-3">
-                            <div class="video-gallery text-center">
-                                <a href="#">
-                                    <div class="iframe-img">
-                                        <img src="~/eshop/images/home/iframe2.png" alt="" />
-                                    </div>
-                                    <div class="overlay-icon">
-                                        <i class="fa fa-play-circle-o"></i>
-                                    </div>
-                                </a>
-                                <p>Circle of Hands</p>
-                                <h2>24 DEC 2014</h2>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-3">
-                            <div class="video-gallery text-center">
-                                <a href="#">
-                                    <div class="iframe-img">
-                                        <img src="~/eshop/images/home/iframe3.png" alt="" />
-                                    </div>
-                                    <div class="overlay-icon">
-                                        <i class="fa fa-play-circle-o"></i>
-                                    </div>
-                                </a>
-                                <p>Circle of Hands</p>
-                                <h2>24 DEC 2014</h2>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-3">
-                            <div class="video-gallery text-center">
-                                <a href="#">
-                                    <div class="iframe-img">
-                                        <img src="~/eshop/images/home/iframe4.png" alt="" />
-                                    </div>
-                                    <div class="overlay-icon">
-                                        <i class="fa fa-play-circle-o"></i>
-                                    </div>
-                                </a>
-                                <p>Circle of Hands</p>
-                                <h2>24 DEC 2014</h2>
-                            </div>
-                        </div>
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="video-gallery text-center">
+                <a href="#">
+                    <div class="iframe-img">
+                        <img src="~/eshop/images/home/iframe1.png" alt="" />
                     </div>
+                    <div class="overlay-icon">
+                        <i class="fa fa-play-circle-o"></i>
+                    </div>
+                </a>
+                <p>Circle of Hands</p>
+                <h2>24 DEC 2014</h2>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="video-gallery text-center">
+                <a href="#">
+                    <div class="iframe-img">
+                        <img src="~/eshop/images/home/iframe2.png" alt="" />
+                    </div>
+                    <div class="overlay-icon">
+                        <i class="fa fa-play-circle-o"></i>
+                    </div>
+                </a>
+                <p>Circle of Hands</p>
+                <h2>24 DEC 2014</h2>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="video-gallery text-center">
+                <a href="#">
+                    <div class="iframe-img">
+                        <img src="~/eshop/images/home/iframe3.png" alt="" />
+                    </div>
+                    <div class="overlay-icon">
+                        <i class="fa fa-play-circle-o"></i>
+                    </div>
+                </a>
+                <p>Circle of Hands</p>
+                <h2>24 DEC 2014</h2>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="video-gallery text-center">
+                <a href="#">
+                    <div class="iframe-img">
+                        <img src="~/eshop/images/home/iframe4.png" alt="" />
+                    </div>
+                    <div class="overlay-icon">
+                        <i class="fa fa-play-circle-o"></i>
+                    </div>
+                </a>
+                <p>Circle of Hands</p>
+                <h2>24 DEC 2014</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
 
                 </div>
             </div>
         </div>
     </footer><!--/Footer-->
     <script src="~/eshop/js/jquery.js"></script>
-    <script src="~/eshop/js/bootstrap.min.js"></script>
     <script src="~/eshop/js/jquery.scrollUp.min.js"></script>
     <script src="~/eshop/js/price-range.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <script src="~/eshop/js/jquery.prettyPhoto.js"></script>
     <script src="~/eshop/js/main.js"></script>
 </body>
